--- a/src/components/RecentPosts.astro
+++ b/src/components/RecentPosts.astro
@@ -1,14 +1,15 @@
 ---
 import {getCollection} from "astro:content";
-const posts = (await getCollection('blog')).filter(post => post.date <= new Date()).sort((a, b) => b.date - a.date).slice(0, 5);
+const posts = (await getCollection('blog'))
+    .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()).slice(0, 5);
 ---
-<h1>Recent Posts</h1>
+<h6>Recent Posts</h6>
 <ul>
     {
         posts.map(post => {
             return (
                 <li>
-                    <h3>{post.title}</h3>
+                    <h3>{post.data.title}</h3>
                     <p>{post.body}</p>
                 </li>
             )
