--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,63 +1,23 @@
 ---
 import HeaderLink from './HeaderLink.astro';
 import {SITE_TITLE} from '../consts';
+const backgroundImage = "/image.jpg";
 ---
-
-<header>
-    <nav>
-        <h2><a href="/">{SITE_TITLE}</a></h2>
-        <div class="internal-links">
-            <HeaderLink href="/">Home</HeaderLink>
+<header class="bg-gradient-to-r bg-gray-400/20">
+    <div class="container mx-auto h-full flex items-end justify-evenly pt-1 mb-1">
+        <h1 class="basis- text-black font-blog font-bold"><a href="/">{SITE_TITLE}</a></h1>
+        <div class="internal-links basis-1/6 text-black flex flex-row items-center justify-between">
             <HeaderLink href="/blog">Blog</HeaderLink>
+            <HeaderLink href="/blog">Tags</HeaderLink>
             <HeaderLink href="/about">About</HeaderLink>
         </div>
-        <div></div>
-    </nav>
+        <div class="basis-1/6 flex flex-row items-center justify-evenly ">
+            <a href=""><img class="w-6" src="/github-mark.png"/> </a>
+            <a href=""><img class="w-6" src="/Instagram_Glyph_Gradient.png"/></a>
+            <a href=""><img class="w-6" src="/Facebook_Logo_Primary.png"/></a>
+            <a href=""><img class="w-6" src="/logo-black.png"/> </a>
+        </div>
+    </div>
+    <div class="bg-cover bg-center h-64" style={`background-image: url(${backgroundImage})`}>
+    </div>
 </header>
-<style>
-    header {
-        margin: 0;
-        padding: 0 1em;
-        background: white;
-        box-shadow: 0 2px 8px rgba(var(--black), 5%);
-    }
-
-    h2 {
-        margin: 0;
-        font-size: 1em;
-    }
-
-    h2 a,
-    h2 a.active {
-        text-decoration: none;
-    }
-
-    nav {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    nav a {
-        padding: 1em 0.5em;
-        color: var(--black);
-        border-bottom: 4px solid transparent;
-        text-decoration: none;
-    }
-
-    nav a.active {
-        text-decoration: none;
-        border-bottom-color: var(--accent);
-    }
-
-    .social-links,
-    .social-links a {
-        display: flex;
-    }
-
-    @media (max-width: 720px) {
-        .social-links {
-            display: none;
-        }
-    }
-</style>
