--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,5 +7,6 @@ import Layout from '../layouts/BlogPost.astro';
 	description="Lorem ipsum dolor sit amet"
 	pubDate={new Date('August 08 2021')}
 	heroImage="/blog-placeholder-about.jpg"
+	tags={['about', 'me']}
 >
 </Layout>
