--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,28 +2,7 @@
 const today = new Date();
 ---
 
-<footer>
-	&copy; {today.getFullYear()} Yang Hyeon Deok. All rights reserved.
-
+<footer class='flex justify-center items-center w-full px-16 h-28 border-t-2'>
+	&copy; {today.getFullYear()} HyeonD. All rights reserved.
 </footer>
-<style>
-	footer {
-		padding: 2em 1em 6em 1em;
-		background: linear-gradient(var(--gray-gradient)) no-repeat;
-		color: rgb(var(--gray));
-		text-align: center;
-	}
-	.social-links {
-		display: flex;
-		justify-content: center;
-		gap: 1em;
-		margin-top: 1em;
-	}
-	.social-links a {
-		text-decoration: none;
-		color: rgb(var(--gray));
-	}
-	.social-links a:hover {
-		color: rgb(var(--gray-dark));
-	}
-</style>
+
