--- a/src/components/Header/HeaderLink.astro
+++ b/src/components/Header/HeaderLink.astro
@@ -7,9 +7,23 @@ const { href, class: className, ...props } = Astro.props;
 
 const { pathname } = Astro.url;
 const subpath = pathname.match(/[^\/]+/g);
+console.log('path', subpath, pathname);
 const isActive = href === pathname || href === '/' + subpath?.[0];
 ---
 
 <a href={href} class:list={[className, { active: isActive }]} {...props}>
 	<slot />
 </a>
+<style>
+	a {
+		color: inherit;
+		text-decoration: none;
+		padding: 0.5rem 1rem;
+	}
+
+	a.active {
+		background: #6b7280;
+		color: white;
+		font-weight: bolder;
+	}
+</style>
