--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,48 +1,41 @@
 ---
-import {type CollectionEntry, getCollection} from 'astro:content';
-// import BlogPost from '../../layouts/BlogPost.astro';
-import {contentfulClient} from "../../lib/contentful";
-import type {BlogPost} from "../../lib/contentful";
-import {documentToHtmlString} from "@contentful/rich-text-html-renderer";
+import BlogLayout from '../../layouts/BlogLayout.astro';
+import {getPosts} from "../../utils";
+import {type CollectionEntry} from 'astro:content';
+import Share from '@/components/Share';
+import TableOfContents from '../../components/TableOfContents.astro';
 
-export async function getStaticPaths() {
-    const entries = await contentfulClient.getEntries<BlogPost>({
-        content_type: "blogPost"
-    });
-    const pages = entries.items.map((item) => ({
-        params: {slug: item.fields.slug},
-        props: {
-            title: item.fields.title,
-            content: documentToHtmlString(item.fields.content),
-            date: new Date(item.fields.date).toLocaleDateString(),
+export const getStaticPaths = async () => {
+    const posts = await getPosts();
+    const paths = posts.map(post => ({
+        params: {
+            slug: post.slug
         },
+        props: post
     }));
-    return pages;
-}
-// export async function getStaticPaths() {
-// 	const posts = await getCollection('blog');
-// 	return posts.map((post) => ({
-// 		params: { slug: post.slug },
-// 		props: post,
-// 	}));
-// }
-// type Props = CollectionEntry<'blog'>;
-
-// const post = Astro.props;
-// const { Content } = await post.render();
-const {content, title, date} = Astro.props;
+    return paths;
+};
+type Props = CollectionEntry<'blog'>;
+const post = Astro.props
+const {Content, headings, remarkPluginFrontmatter} = await post.render();
 ---
+<BlogLayout id={post.id}
+            data={post.data}
+            headings={headings}
+            readTime={remarkPluginFrontmatter.minutesRead}>
+    <div class='grid grid-cols-1 md:grid-cols-[20%_auto] gap-10 mt-8'>
+        <!-- aside  -->
+		<aside class='md:flex flex-col gap-8 hidden'>
+			<Share />
+			<div class='sticky top-24 self-start hidden md:block transition-all duration-200'>
+				{headings && headings.length > 0 && <TableOfContents {headings} />}
+			</div>
+		</aside>
+        <article class='max-w-full w-full'>
+			<div class='prose prose-lg md:prose-xl dark:prose-invert mb-12 min-w-full'>
+				<Content />
+			</div>
 
-<!--<BlogPost {...post.data}>-->
-<!--	<Content />-->
-<!--</BlogPost>-->
-<html lang="en">
-<head>
-    <title>{title}</title>
-</head>
-<body>
-<h1>{title}</h1>
-<time>{date}</time>
-<article set:html={content}/>
-</body>
-</html>
+		</article>
+    </div>
+</BlogLayout>
