--- a/src/pages/categories/[...category]/[page].astro
+++ b/src/pages/categories/[...category]/[page].astro
@@ -6,7 +6,7 @@ import TitlePage from '@/components/TitlePage'
 import {sluglify, unsluglify, getCategories, getPosts} from '@/utils'
 import {siteConfig} from '@/data/site.config'
 import Pagination from '@/components/Pagination'
-import {CategoryInfo} from "../../../utils/post";
+import type {CategoryInfo} from "../../../utils/post";
 
 export async function getStaticPaths({paginate}: any) {
     const categories = await getCategories()
